--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,9 @@
-DATABASE ='mongodb+srv://dheaaprilinda:FIi46euvrj0aHBdi@cluster0.he7vf.mongodb.net/'
+DATABASE ='mongodb+srv://411221005:tan6lfqdpl87oi4t@cluster0.he7vf.mongodb.net/'
 SECRET_KEY = hfdf-mdcmej-ie990djw-jwjswdwdw2332
 JWT_EXPIRES_IN = 6d
 JWT_COOKIE_EXPIRES_IN = 6d
 
-CLOUDINARY_API_KEY = 496276889665286
-CLOUDINARY_SECRET_KEY = r_bk0RJRbWVGwdkcb-Iu0JPgKsE
-CLOUDINARY_NAME = dq0baj7jw
+CLOUDINARY_API_KEY = 156935631877187
+CLOUDINARY_SECRET_KEY = IUS2v2LKqxWM1FATPpm-Vi5X7Hg
+CLOUDINARY_NAME = dw4vw76tl
+
